# matchms

./: .editorconfig  .fossa.yml  .gitignore  .pre-commit-config.yaml  .prospector.yml  .readthedocs.yml  .sonarcloud.properties  .travis.yml  .zenodo.json  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Evalution  NOTICE  README.md  README.rst  config_template.py  dev-requirements.txt  environment.yml  meta.yaml  poetry.toml  project_setup.rst  pyproject.toml  q  requirements-fossa.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: CI_build.yml  CI_dev_environment.yml  CI_first_code_check  CI_first_code_check.yml  CI_generate_dev_requirements.yml  CI_publish_poetry_pypi.yaml  CI_publish_pypi.yml  CI_push_pypi.yml  SonarCloud.yml  anaconda.yml  build.yml  ci.yml  ci_build.yml  ci_deploy.yml  ci_deploy_anaconda.yml  ci_deploy_pypi.yml  conda_build.yml  conda_publish.yml  conda_verify.yml  pypi.yml  pythonapp.yml  stale.yml  test_ecosystem.yml
citation/: paper.bib  paper.md
code/: MS_functions.py  MS_library_search.py  MS_similarity_classical.py  helper_functions.py  networking.py  plotting_functions.py  similarity_measure.py
conda/: bld.bat  build-matchms.sh  build.sh  conda_build_config.yaml  environment-build.yml  environment-dev.yml  environment.yml  meta.yaml  requirements-dev.txt  run_tests.sh
docs/: Makefile  conf.py  index.rst  make.bat  matchms.MS_functions.rst  matchms.MS_library_search.rst  matchms.MS_similarity_classical.rst  matchms.helper_functions.rst  matchms.networking.rst  matchms.plotting_functions.rst  matchms.similarity_measure.rst
integration-tests/: test_clean_peaks_workflow.py  test_interpret_charge_mode.py  test_user_workflow.py  test_user_workflow_spec2vec.model  test_user_workflow_spec2vec.py  test_user_workflow_spec2vec_parallel.py
matchms/: Fingerprints.py  FragmentCollection.py  Fragments.py  MS_functions.py  MS_library_search.py  MS_similarity_classical.py  Metadata.py  MetadataCollection.py  MetadataTable.py  Pipeline.py  Scores.py  SpectraCollection.py  Spectrum.py  SpectrumProcessor.py  Spikes.py  StackedSparseScores.py  __init__.py  __version__.py  calculate_scores.py  calculate_scores_parallel.py  constants.py  hashing.py  helper_functions.py  logging.py  logging.yml  logging_functions.py  matchms.py  metadata_entry_testing.py  metadata_utils.py  ms_functions.py  ms_library_search.py  ms_similarity_classical.py  networking.py  plotting_functions.py  repair_inchi_inchikey_smiles.py  similarity_measure.py  typing.py  utils.py  yaml_file_functions.py
matchms/data/: __init__.py  export_key_conversions.csv  known_adduct_conversions.csv  known_adduct_conversions.json  known_adducts.py  known_adducts.yaml  known_adducts_table.csv  known_key_conversions.csv
matchms/exporting/: __init__.py  metadata_export.py  save.py  save_as_json.py  save_as_mgf.py  save_as_msp.py  save_as_mzml.py  save_as_mzspeclib.py  save_spectra.py
matchms/filtering/: SpeciesString.py  SpectraCollectionProcessor.py  SpectrumProcessor.py  __init__.py  _dispatch.py  _intenstiy_manager.py  add_adduct.py  add_compound_name.py  add_fingerprint.py  add_losses.py  add_parent_mass.py  add_precursor_mz.py  add_retention.py  add_retention_time.py  clean_compound_name.py  clean_inchikeys.py  clean_inchis.py  complete_compound_annotation.py  correct_charge.py  default_filters.py  default_pipelines.py  (+55 more)
notebooks/: Spec2Vec_01_MGF_from_gnps_library_search.ipynb  Spec2Vec_02_data_filtering_and_splitting.ipynb  Spec2Vec_02_data_splitting_model_training.ipynb  Spec2Vec_02_negative_mode-data_filtering_and_splitting.ipynb  Spec2Vec_02_positive_mode-data_filtering_and_splitting.ipynb  Spec2Vec_03_Similarities_based_on_molecular_fingerprints.ipynb  Spec2Vec_03_import_unique_inchikey_subset.ipynb  Spec2Vec_04_Similarities_based_on_classical_scores_on_uniqueInchikey_subset.ipynb  Spec2Vec_04_Similarities_based_on_cosine_modcosine.ipynb  Spec2Vec_05_benchmarking_Spec2Vec_hyperparameter_tuning.ipynb  Spec2Vec_05_benchmarking_compare_Spec2Vec_with_classical_scores.ipynb  Spec2Vec_06_benchmarking_compare_Spec2Vec_with_classical_scores.ipynb  Spec2Vec_06_library_matching.ipynb  Spec2Vec_07_compare_unkown_spectra_to_library_spectra.ipynb  Spec2Vec_08_positive_mode_text_generalization_ability.ipynb  Spec2Vec_09_ParseEmmaData.ipynb  Spec2Vec_10_Spec2Vec_spectra_networking.ipynb  Spec2Vec_MGF_from_gnps_library_search.ipynb  Spec2Vec_import_unique_inchi_subset.ipynb  Spec2Vec_in-depth_comparisons_modcos_Spec2Vec.ipynb
paper/: paper.bib  paper.md
readthedocs/: conf.py  environment.yml  index.rst  requirements.txt
spec2vec/: .gitignore  CITATION.cff
tests/: Hydrogen_chloride.msp  builder_Spectrum.py  conftest.py  cosine_linear_reference.json  gnps_spectra.json  golm.msp  linear_cosine_reference.json  massbank_five_spectra.msp  massbank_style_Hydrogen_chloride.msp  multiline_semicolon.msp  problematic_spectra.msp  rcx_gc-ei_ms_20201028_perylene.msp  run_spectrum_and_collection.py  test_MS_functions.py  test_MS_similarity_classical.py  test_ParentmassMatch.py  test_ParentmassMatchParallel.py  test_PrecursormzMatch.py  test_SimilarityNetwork.py  test_Spectrum.py  test_add_adduct.py  test_add_compound_name.py  test_add_fingerprint.py  test_add_losses.py  test_add_parent_mass.py  test_add_precursor_mz.py  test_add_retention.py  test_add_retention_time.py  test_clean_compound_name.py  test_clean_inchikeys.py  test_clean_inchis.py  test_collect_peak_pairs.py  test_complete_compound_annotation.py  test_correct_charge.py  test_cosine_greedy.py  test_cosine_greedy_numba.py  test_cosine_greedy_vectorial.py  test_cosine_hungarian.py  test_derive_adduct_from_name.py  test_derive_formula_from_name.py  (+85 more)
tutorial/: matchms_tutorial_01_building_analysis_pipeline.ipynb  matchms_tutorial_02_compute_similarities_with_Spec2Vec.ipynb  matchms_tutorial_03_create_graph_form_Spec2Vec_similarities.ipynb  matchms_tutorial_03_create_graph_from_Spec2Vec_similarities.ipynb
(+418 files in other folders)
