[project]
name = "matchms"
version = "0.31.0"
description = "Python library for large-scale comparisons and processing of tandem mass spectral data"
readme = "README.rst"
requires-python = ">=3.10,<3.14"  # blocked because of pynndescent
license = { text = "Apache-2.0" }
authors = [
  { name = "matchms developer team", email = "florian.huber@hs-duesseldorf.de" }
]
keywords = [
  "fuzzy matching",
  "fuzzy search",
  "mass spectrometry",
  "similarity measures",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "deprecated>=1.3.1",
  "lxml>=6.0.2",
  "matplotlib>=3.10.8",
  "networkx>=3.4.2,<3.5",
  "numba>=0.61.2",
  "numpy>=2.2.6",
  "pandas>=2.3.3",
  "pickydict>=0.5.0",
  "pubchempy>=1.0.5",
  "pynndescent>=0.6.0",
  "pyteomics>=4.7.5",
  "pyyaml>=6.0.3",
  "rdkit>=2025.9.3",
  "requests>=2.32.5",
  "scipy>=1.15.3,<1.16",
  "sparsestack>=0.7.0",
  "tqdm>=4.67.1",
]
repository = "https://github.com/matchms/matchms"
documentation = "https://matchms.readthedocs.io/en/latest/"

[dependency-groups]
dev = [
  "decorator>=5.2.1",
  "poetry-bumpversion>=0.3.3",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.13",
  "testfixtures>=8.3.0,<9",
  "twine>=6.2.0",
  "yapf>=0.43.0",
]
doc = [
  "sphinx<=7",
  "sphinx-rtd-theme>=3.1.0",
  "sphinxcontrib-apidoc>=0.6.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.poetry_bumpversion.file."matchms/__version__.py"]

[tool.ruff]
extend-exclude = ["integration-tests", "paper", "readthedocs"]
line-length = 120
output-format = "grouped"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
# TODO: add some rules in future, eg. W291/292
extend-select = ["D", "E", "I"]
# TODO: some of these rules should be enforced in the future, eg. E713
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D200",
  "D201",
  "D202",
  "D203",
  "D204",
  "D205",
  "D209",
  "D210",
  "D212",
  "D213",
  "D4",
  "E713"
]

[tool.ruff.lint.isort]
known-first-party = ["matchms"]
lines-after-imports = 2
no-lines-before = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

# disable pydoc for tests
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
  "integration-tests",
]

[build_sphinx]
source-dir = "docs"
build-dir = "docs/_build"
all_files = 1
builder = "html"
