[bumpversion]
current_version = 0.3.0

[bumpversion:file:conda/meta.yaml]
search = set version = "{current_version}"
replace = set version = "{new_version}"

[bumpversion:file:matchms/__version__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
description-file = README.rst

[aliases]
# Define `python setup.py test`
test=pytest

[tool:isort]
;recursive only works with cli, otherwise not recognized,
;in unreleased isort==5 recursive is the only available behavior
;recursive = True
;isort will use env var CONDA_PREFIX by default
;conda_env = matchms
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
;matchms is recognized as first party by default, but we specify anyway for robustness
known_first_party = matchms
;conf.py in readthedocs needs to insert a path before import so should not be sorted
skip = readthedocs/conf.py

[coverage:run]
branch = True
source = matchms

[tool:pytest]
testpaths = tests integration-tests
python_classes = *TestSuite
junit_family = xunit2

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
