[bumpversion]
current_version = 0.4.0

[bumpversion:file:conda/meta.yaml]
search = set version = "{current_version}"
replace = set version = "{new_version}"

[bumpversion:file:matchms/__version__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
description-file = README.rst

[aliases]
test = pytest

[tool:isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = matchms
skip = readthedocs/conf.py

[coverage:run]
branch = True
source = matchms

[tool:pytest]
testpaths = tests integration-tests
python_classes = *TestSuite
junit_family = xunit2

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
